--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ITEUNGBEV1=apihost
-MONGOSTRING=mongodb+srv://gilarya:kamugantengya@gilarya.8cvvcex.mongodb.net/test
-MARIASTRINGAKADEMIK=btfhhyuxwsgfo8sc:x7qemnrfj10l73mh@tcp(q0h7yf5pynynaq54.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306)/
+MONGOSTRING=mongodb://user:pass@host:port
+MARIASTRINGAKADEMIK=user:pass@tcp(host:port)/
 
 INTERNALHOST=iphost
 PORT=porthost
